PR/50125 - Jarle Greipsland -- Incorrect PID in /var/run/mountd.pid

Move call to pidfile() after daemon() so that correct (child) pid is
written to pidfile.