usr.sbin/mountd/mountd.c
@@ -1,4 +1,4 @@
-/* 	$NetBSD: mountd.c,v 1.126 2014/04/04 12:45:59 gson Exp $	 */
+/* 	$NetBSD: mountd.c,v 1.127 2015/08/05 23:23:47 jnemeth Exp $	 */
 
 /*
  * Copyright (c) 1989, 1993
@@ -42,7 +42,7 @@ __COPYRIGHT("@(#) Copyright (c) 1989, 1993\
 #if 0
 static char     sccsid[] = "@(#)mountd.c  8.15 (Berkeley) 5/1/95";
 #else
-__RCSID("$NetBSD: mountd.c,v 1.126 2014/04/04 12:45:59 gson Exp $");
+__RCSID("$NetBSD: mountd.c,v 1.127 2015/08/05 23:23:47 jnemeth Exp $");
 #endif
 #endif				/* not lint */
 
@@ -336,7 +336,6 @@ main(int argc, char **argv)
 		(void)fprintf(stderr, "Here we go.\n");
 	(void)signal(SIGHUP, get_exportlist);
 	(void)signal(SIGTERM, send_umntall);
-	pidfile(NULL);
 
 	rpcb_unset(RPCPROG_MNT, RPCMNT_VER1, NULL);
 	rpcb_unset(RPCPROG_MNT, RPCMNT_VER3, NULL);
@@ -463,6 +462,7 @@ main(int argc, char **argv)
 		(void)signal(SIGINT, SIG_IGN);
 		(void)signal(SIGQUIT, SIG_IGN);
 	}
+	pidfile(NULL);
 	svc_run();
 	syslog(LOG_ERR, "Mountd died");
 	exit(1);
